# ai-developer-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp_agent.config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: E2E_TESTING_GUIDE.md
scripts/: check_credentials.py  poll_jira.py  run_pipeline.py  setup_test_data.py
src/: app.py  main.py
src/agents/: code_finder.py  code_reviewer.py  code_writer.py  task_reader.py
src/clients/: __init__.py  bitbucket_client.py  gitlab_client.py
src/config/: mcp_servers.py  settings.py
src/pipeline/: confluence_publisher.py  llm_router.py  logging.py  models.py  orchestrator.py  retry.py  token_budget.py
src/utils/: git_helpers.py  jira_helpers.py
src/webhook/: models.py  server.py  task_lock.py  validators.py
tests/: conftest.py  test_app.py  test_code_finder.py  test_code_reviewer.py  test_code_writer.py  test_confluence_publisher.py  test_git_helpers.py  test_jira_helpers.py  test_llm_router.py  test_logging.py  test_main.py  test_mcp_config.py  test_models.py  test_orchestrator.py  test_retry.py  test_settings.py  test_task_lock.py  test_task_reader.py  test_token_budget.py  test_webhook_validators.py
tests/e2e/: __init__.py  conftest.py  test_github_live.py  test_gitlab_live.py  test_jira_live.py  test_llm_live.py  test_pipeline_dryrun.py  test_webhook_live.py
tests/integration/: test_full_pipeline.py  test_mcp_integration.py  test_webhook_http.py
